# cmake_templete

./: CMakeLists.txt
source/exe/: CMakeLists.txt  main.cpp
source/lib/: CMakeLists.txt
